--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ search
 
 <section>
   <div>
-    <img class="user" src="user.jpg">
+    <img class="user" src="User.jpg">
   </div>
   <div class="info">
     <h4>it’ s Me Mohammed Adeeb</h4>
